new changes added for international-zone page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,3 +5,15 @@
   padding: 0;
   margin: 0;
 }
+
+app-footer {
+  display: none;
+  padding-top: 30px;
+}
+
+/* Show the footer only for mobile screens (max-width: 768px) */
+@media (max-width: 768px) {
+  app-footer {
+    display: block;
+  }
+}
