--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <app-header *ngIf="showHeaderFooter"></app-header>
+  <app-header></app-header>
   <router-outlet></router-outlet>
-  <!-- <app-footer *ngIf="showHeaderFooter"></app-footer> -->
+  <app-footer></app-footer>
 </div>
