--- a/src/app/zone/international-zone/international-zone.component.html
+++ b/src/app/zone/international-zone/international-zone.component.html
@@ -8,4 +8,38 @@
         </div>
         <img src="assets/icons/world-icon.png" alt="World Icon" class="header-icon" />
     </div>
+    <div class="section-header">
+
+
+        <h2 class="section-title">
+            Explore places for<span class="highlight"> Higher Studies</span>
+        </h2>
+        <div class="section-line"></div> <!-- Horizontal line in the same row -->
+    </div>
+    <!-- Quick Access Section -->
+    <div class="quick-access">
+        <h2 class="quick-access-title">Quick Access</h2>
+        <div class="quick-access-list">
+            <div *ngFor="let place of places.slice(4, 10)" class="quick-access-item">
+                {{ place.name }}
+            </div>
+        </div>
+    </div>
+
+
+    <div class="international-zone">
+
+        <div class="card-container">
+            <div class="card" *ngFor="let place of places">
+                <div class="image-container">
+                    <img [src]="place.image" [alt]="place.name" />
+                </div>
+                <div class="card-title">{{ place.name }}</div>
+            </div>
+        </div>
+
+    </div>
+
+
+
 </div>
