--- a/src/app/core/footer/footer.component.css
+++ b/src/app/core/footer/footer.component.css
@@ -8,8 +8,8 @@
   justify-content: space-around;
   align-items: center;
   background-color: #f5f5f5;
-  padding: 10px 0;
   box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
+  position: relative;
 }
 
 .footer-item {
