--- a/src/app/zone/skill-zone/skill-zone-category/skill-zone-category.component.css
+++ b/src/app/zone/skill-zone/skill-zone-category/skill-zone-category.component.css
@@ -34,11 +34,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: 60px;
-}
-
-.long-arrow {
-  width: 160px;
+  margin-left: 50px;
 }
 
 .long-arrow {
@@ -63,31 +59,32 @@
 }
 .stat-box {
   display: flex;
-  align-items: center;
+  align-items: center; /* Centers content vertically */
+  justify-content: center; /* Centers content horizontally */
   gap: 10px;
   background: #ecf0ff;
   border-radius: 8px;
   padding: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 270px;
+  width: 250px;
   border: 1px solid #bfceff;
 }
 
 .stat-icon {
   width: 30px;
   height: auto;
-  gap: 22px;
 }
 
 .stat-box p {
-  font-size: 8px;
+  font-size: 14px;
   color: #6e7aa2;
+  margin: 0;
 }
 
 .stat-box p span {
   color: #ef7f1a;
-  font-size: 12px;
-  font-weight: 500;
+  font-size: 14px;
+  font-weight: 600;
 }
 .cards-container {
   display: flex;
@@ -169,10 +166,6 @@
   .card {
     width: 90%;
   }
-
-  .header h1 {
-    font-size: 24px;
-  }
   .stat-icon {
     width: 22px;
   }
@@ -182,26 +175,22 @@
     padding-top: 10px;
     width: 100%;
   }
-}
-
-@media (max-width: 768px) {
-  .header h1 {
-    font-size: 20px;
-  }
-
-  .long-arrow {
-    width: 120px;
-  }
 
   .total-stats {
     margin: 10px 10px 0 10px;
-    padding: 10px;
+    padding: 5px;
     gap: 10px;
   }
 
   .stat-box {
     width: 100%;
     padding: 5px;
+  }
+  .stat-box p {
+    font-size: 10px;
+  }
+  .stat-box p span {
+    font-size: 12px;
   }
 
   .cards-container {
