--- a/src/app/zone/international-zone/international-zone-details/international-zone-details.component.html
+++ b/src/app/zone/international-zone/international-zone-details/international-zone-details.component.html
@@ -21,7 +21,7 @@
         <div class="card">
             <div class="card-header">
                 <h2>About {{ placeName }}</h2>
-                <div class="header-icons">
+                <div class="articale-icons">
                     <img src="assets/icons/bookmark-icon.png" alt="Bookmark" class="header-icon" />
                     <img src="assets/icons/share-icon.png" alt="Share" class="header-icon" />
                 </div>
