icons changes fixed for international-zone article

--- a/src/app/zone/international-zone/international-zone-details/international-zone-details.component.css
+++ b/src/app/zone/international-zone/international-zone-details/international-zone-details.component.css
@@ -111,14 +111,14 @@
   color: #f7931e;
 }
 
-.header-icons {
+.article-icons {
   display: flex;
   align-items: center;
   gap: 15px;
   margin-left: auto;
 }
 
-.article-icon {
+.header-article-icon {
   width: auto;
   height: 18px;
   cursor: pointer;
