--- a/src/app/zone/international-zone/international-zone-details/international-zone-details.component.html
+++ b/src/app/zone/international-zone/international-zone-details/international-zone-details.component.html
@@ -21,9 +21,9 @@
         <div class="card">
             <div class="card-header">
                 <h2>About {{ placeName }}</h2>
-                <div class="articale-icons">
-                    <img src="assets/icons/bookmark-icon.png" alt="Bookmark" class="header-icon" />
-                    <img src="assets/icons/share-icon.png" alt="Share" class="header-icon" />
+                <div class="article-icons">
+                    <img src="assets/icons/bookmark-icon.png" alt="Bookmark" class="header-article-icon" />
+                    <img src="assets/icons/share-icon.png" alt="Share" class="header-article-icon" />
                 </div>
             </div>
             <div class="card-body">
