--- a/src/app/zone/skill-zone/skill-zone-category/skill-zone-category.component.html
+++ b/src/app/zone/skill-zone/skill-zone-category/skill-zone-category.component.html
@@ -7,7 +7,7 @@
             <img src="assets/icons/long-arrow.png" alt="Arrow" class="long-arrow" />
             <h2>{{ title }}</h2>
         </div>
-        <img src="assets/icons/category.png" alt="Category Icon" class="header-icon" />
+        <img src="assets/icons/category-icon.png" alt="Category Icon" class="header-icon" />
     </div>
 
     <!-- Total Stats Section -->
