--- a/src/app/zone/skill-zone/skill-zone.component.html
+++ b/src/app/zone/skill-zone/skill-zone.component.html
@@ -6,7 +6,7 @@
             <h1>Skill Zone</h1>
             <img src="assets/icons/long-arrow.png" alt="Arrow" class="long-arrow" />
         </div>
-        <img src="assets/icons/puzzle.png" alt="Puzzle Icon" class="header-icon" />
+        <img src="assets/icons/setting-icon.png" alt="Setting Icon" class="header-icon" />
     </div>
 
     <!-- Learn and Play Section -->
