--- a/src/app/zone/international-zone/international-zone.component.css
+++ b/src/app/zone/international-zone/international-zone.component.css
@@ -182,6 +182,8 @@
   border-radius: 0 0 15px 15px;
   text-align: start;
   margin: 8px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 /* Responsive adjustments */
