--- a/src/app/zone/learning-zone/learning-zone.component.html
+++ b/src/app/zone/learning-zone/learning-zone.component.html
@@ -7,7 +7,7 @@
             <h1>Learning Zone</h1>
             <img src="assets/icons/long-arrow.png" alt="Arrow" class="long-arrow" />
         </div>
-        <img src="assets/icons/puzzle.png" alt="Puzzle Icon" class="header-icon" />
+        <img src="assets/icons/puzzle-icon.png" alt="Puzzle Icon" class="header-icon" />
     </div>
 
     <!-- Knowledge Hub Section -->
