--- a/src/app/zone/entrepreneur-zone/opportunity-detail/opportunity-detail.component.html
+++ b/src/app/zone/entrepreneur-zone/opportunity-detail/opportunity-detail.component.html
@@ -1,11 +1,51 @@
-<div class="opportunity-container">
+<div class="details-container">
+    <!-- Header -->
     <div class="header">
         <img src="assets/icons/back-arrow.png" alt="Back Icon" routerLink="/entrepreneur-zone" class="back-button" />
         <div class="title-container">
             <h1>Entrepreneur Zone</h1>
             <img src="assets/icons/long-arrow.png" alt="Arrow" class="long-arrow" />
-            <h2>{{ title }}</h2>
+            <h2>{{ opportunity?.title }}</h2> <!-- Display Title -->
         </div>
         <img src="assets/icons/category-icon.png" alt="Category Icon" class="header-icon" />
+    </div>
+
+    <div class="content" *ngIf="opportunity">
+        <div class="sub-header">
+            <div class="stat-box">
+                <img src="assets/icons/article-icon.png" alt="Article Icon" class="stat-icon" />
+                <p>
+                    Articles: {{ opportunity.articles.length }} / <span>20 Solved</span>
+                </p>
+            </div>
+        </div>
+
+        <!-- Loop through all articles of this opportunity -->
+        <div *ngFor="let article of opportunity.articles" class="card">
+            <div class="card-header">
+                <h2>{{ article.articleTitle }}</h2>
+                <div class="article-icons">
+                    <img src="assets/icons/bookmark-icon.png" alt="Bookmark" class="header-article-icon" />
+                    <img src="assets/icons/share-icon.png" alt="Share" class="header-article-icon" />
+                </div>
+            </div>
+            <div class="card-body">
+                <img class="card-image" [src]="article.articleImage" [alt]="article.articleTitle" />
+                <div class="card-content">
+                    <p>{{ article.articleContent }}</p>
+                    <button class="register-button" (click)="navigateToRegister()">Register my Interest</button>
+                </div>
+            </div>
+            <div class="card-footer">
+                <p>
+                    Please scroll up for more
+                    <span class="material-icons">arrow_upward</span>
+                </p>
+                <div class="footer-icons">
+                    <span class="material-icons">thumb_up</span>
+                    <span class="material-icons">thumb_down</span>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
